# pyside6-plotly

./: LICENSE  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/pyside6_plotly/: __init__.py  demo.py  plotly_widget.py  pyside6_plotly.py  test-events.py  test-local-plotly.py  test.html  test_output.html  write_html.py
tests/: __init__.py  test_pyside6_plotly.py
