[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyside6_plotly"
version = "0.1.0"
description = "QtWidget showing a an interactive plotly plot with callbacks"
readme = "README.rst"
authors = [
  {name = "Brian B. Maranville", email = "brian.maranville@nist.gov"}
]
maintainers = [
  {name = "Brian B. Maranville", email = "brian.maranville@nist.gov"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/bmaranville/pyside6_plotly/issues"
changelog = "https://github.com/bmaranville/pyside6_plotly/blob/master/changelog.md"
homepage = "https://github.com/bmaranville/pyside6_plotly"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

